--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.4' 
 }
 
 tasks.named('test') {
